--- a/tooling-stack/tooling-stack-controller.yaml
+++ b/tooling-stack/tooling-stack-controller.yaml
@@ -7,6 +7,7 @@ resources:
     uri: https://github.com/rbogle/test-concourse-pipelines
     branch: main
 
+jobs:
 - name: build-prod-west-tooling-stack
   public: true
   plan:
