fix the var naming and nesting

--- a/environments/env-controller.yaml
+++ b/environments/env-controller.yaml
@@ -17,8 +17,8 @@ jobs:
   - across:
     - var: env
       values: ((.:config.environments))
-  - set_pipeline: ((env))-deployment-pipeline
+    set_pipeline: ((.:env))-deployment-pipeline
     file: pipelines-source/environments/env-pipeline-template.yml
     vars: 
-      environment: ((env))
+      environment: ((.:env))
       created-by: ((source))
