--- a/environments/env-pipeline-template.yaml
+++ b/environments/env-pipeline-template.yaml
@@ -24,3 +24,4 @@ resources:
     uri: git@github.com:rbogle/concourse-locks.git
     branch: main
     pool: ((environment.name))
+    private_key: ((git_key))
