--- a/environments/env-pipeline-template.yaml
+++ b/environments/env-pipeline-template.yaml
@@ -6,7 +6,7 @@ jobs:
   - get: ((environment.name))-source
   - put: env-pipeline-lock
     resource: pipeline-locks
-    params: {name: env-pipeline}
+    params: {claim: env-pipeline}
 
 - name: ((environment.name))-task
   plan:
