--- a/deployment-controller/controller-pipeline.yaml
+++ b/deployment-controller/controller-pipeline.yaml
@@ -13,7 +13,7 @@ jobs:
   - get: pipelines-source
     trigger: true
   - load_var: config
-    file: pipelines-source/environments/environments.json
+    file: pipelines-source/environments.json
   - across:
     - var: env
       values: ((.:config.environments))
@@ -21,7 +21,10 @@ jobs:
      # we can add a task for pipeline file building 
      - set_pipeline: ((.:env.name))-deployment-pipeline
        file: pipelines-source/environments/env-pipeline-template.yaml
+       vars-files:
+        - pipelines-source/states/((.env:name))-versions.yml
        vars: 
           environment: ((.:env)) # pass a whole json object
+          # state_file: ((.:env.name))-state-file.yml
           created_by: ((source)) # injected by the main-pipeline at set-pipeline
           git_key: ((git_key))
