--- a/deployments/platform/tasks/set-versions.yml
+++ b/deployments/platform/tasks/set-versions.yml
@@ -7,16 +7,16 @@ image_resource:
 
 inputs: 
  - name: pipelines_source
+ - name: metadata
 
 outputs: 
  - name: build_info
 
 # params:
-#  CONCOURSE_TARGET: ((concourse_target))
-#  CONCOURSE_URL: ((concourse_url))
-#  CONCOURSE_USER: ((concourse_user))
-#  CONCOURSE_PASSWD: ((concourse_passwd))
-#  CONCOURSE_VERSION: 7.8.1
+#  CONCOURSE_TARGET: 
+#  CONCOURSE_URL: 
+#  CONCOURSE_USER: 
+#  CONCOURSE_PASSWD: 
 
 run:
   path: pipelines_source/deployments/platform/tasks/set-versions.sh 
