--- a/pipeline-controller/config.yml
+++ b/pipeline-controller/config.yml
@@ -1,4 +1,4 @@
-source_repo: https://github.com/rbogle/test-concourse-pipelines
+source_repo: git@github.com:rbogle/test-concourse-pipelines.git
 source_branch: main
 
 locks_repo: git@github.com:rbogle/concourse-locks.git
