--- a/tests/templating/manifest.yml
+++ b/tests/templating/manifest.yml
@@ -1,3 +1,5 @@
+#@data/values
+---
 environments: 
   - name: "development"
     state_repo: "git@github.com:rbogle/test-concourse-pipelines.git"
@@ -22,11 +24,16 @@ components:
     repo: https://github.com/rbogle/env-component-a
     branch: main
     type: pipeline
+    file: foobar-a
+
   - name: component-b
     repo: https://github.com/rbogle/env-component-b
     branch: main
     type: jobs
+    file: foobar-b
+
   - name: component-c
     repo: https://github.com/rbogle/env-component-c
     branch: main
     type: jobs
+    file: foobar-c
