--- a/tests/templating/pipeline-template.yml
+++ b/tests/templating/pipeline-template.yml
@@ -1,81 +1,33 @@
+#@ load("@ytt:data", "data")
+#@ load("@ytt:overlay", "overlay")
+#@ load("common.lib.yml", "component_triggers")
+
 ---
 jobs:
-
 # lock pipeline till completed running
 # prevents starting multiple concurent runs
 - name: set-lock
-  plan:
-  - get: component-a
+  plan: 
+  #@ for comp in data.values.components:
+  - get: #@ comp.name
     trigger: true
-    version: ((resource_version_component-a))
-  - get: component-b
-    trigger: true
-    version: ((resource_version_component-b))
-  - get: component-c
-    trigger: true
-    version: ((resource_version_component-c))
+    version: #@ "((resource_version_{}))".format(comp.name)
+  #@ end
   - put: env-pipeline-lock
     resource: pipeline-locks
     params: {claim: env-pipeline}
 
 # do env component jobs
-- name: build-component-a
+#@ for comp in data.values.components:
+- name: #@ "build-{}".format(comp.name)
   plan:
-  - get: component-a
-    version: ((resource_version_component-a))
+  - get: #@ comp.name
+    version: #@ "((resource_version_{}))".format(comp.name)
     trigger: true
     passed: [set-lock]
-  - task: first-task-component-a
-    file: component-a/tasks/first_task.yml
-
-- name: build-component-b
-  plan:
-  - get: component-b
-    version: ((resource_version_component-b))
-    trigger: true
-    passed: [set-lock]
-  - task: first-task-component-b
-    file: component-a/tasks/first_task.yml
-
-- name: build-component-c
-  plan:
-  - get: component-c
-    version: ((resource_version_component-c))
-    trigger: true
-    passed: [set-lock]
-  - task: first-task-component-c
-    file: component-c/tasks/first_task.yml
-
-# gather and push versions
-- name: set-versions
-  plan:
-  - get: component-a
-    trigger: true
-    version: ((resource_version_component-a))
-    passed: [build-component-a, build-component-b, build-component-c]
-  - get: component-b
-    trigger: true
-    version: ((resource_version_component-b))
-    passed: [build-component-a, build-component-b, build-component-c]
-  - get: component-c
-    trigger: true
-    version: ((resource_version_component-c))
-    passed: [build-component-a, build-component-b, build-component-c]
-  - get: ((environment.name))-state
-  - task: get-versions
-    file: ((environment.name))-state/deployments/platform/tasks/get-versions.yml
-    params:
-      CONCOURSE_TARGET: 
-      CONCOURSE_URL: 
-      CONCOURSE_USER: 
-      CONCOURSE_PASSWD:
-  - task: put-versions
-    file: ((environment.name))-state/deployments/platform/tasks/put-versions.yml
-    params:
-      OUTPUT_FILE: deployments/platform/environements/((environment.name))/output_versions.yml
-  - put: ((environment.name))-state #merges versions from above into 
-    repo: ((environment.name))-state
-
+  - task: #@ "build-{}".format(comp.name)
+    file: #@ comp.file
+#@ end
 
 # release the lock on this pipeline
 - name: release-lock
@@ -86,14 +38,13 @@ jobs:
     params: {release: env-pipeline-lock}
 
 resources:
-# locking pool
 - name: pipeline-locks
   type: pool
   source:
     uri: git@github.com:rbogle/concourse-locks.git
     branch: main
     pool: ((environment.name))
-    private_key: ((git_key))
+    private_key: ((git_key))]
 
 # where we will set our state
 - name: ((environment.name))-state
@@ -103,24 +54,11 @@ resources:
     uri: ((environment.state_repo))
     branch: ((environment.state_branch))
 
-# component tasks or pipelines to run
-- name: component-a
+#@ for comp in data.values.components:
+- name: #@ comp.name
   type: git
   icon: github
   source:
-    uri: ((component-a.repo))
-    branch: ((component-a.branch))
-
-- name: component-b
-  type: git
-  icon: github
-  source:
-    uri: ((component-b.repo))
-    branch: ((component-b.branch))
-
-- name: component-c
-  type: git
-  icon: github
-  source:
-    uri: ((component-c.repo))
-    branch: ((component-c.branch))
+    uri: #@ comp.repo
+    branch: #@ comp.branch
+#@ end
