--- a/tests/gating/child_pipeline.yml
+++ b/tests/gating/child_pipeline.yml
@@ -35,7 +35,11 @@ jobs:
 - name: do_task
   plan:
    - get: child-gate
+     trigger: true
    - get: parent-gate
    - get: pipelines-source
    - task: child_task
      file: pipelines-source/tests/gating/tasks/child-task.yml
+   - put: parent-gate
+     params:
+      item_file: child-gate/run*
