--- a/tests/gating/parent_pipeline.yml
+++ b/tests/gating/parent_pipeline.yml
@@ -32,25 +32,20 @@ resource_types:
     repository: meshcloud/gate-resource
 
 jobs:
-- name: set_gates
+- name: set_child_trigger
   plan:
    - get: child-gate
-   - get: parent-gate
    - get: pipelines-source
    - task: make_gates
      file: pipelines-source/tests/gating/tasks/make-gates.yml
    - put: child-gate
      params:
-       item_file: gates/child_run*
-   - put: parent-gate
-     params:
-       item_file: gates/parent_run*
+       item_file: gates/run*
 
-- name: run_child_task
+- name: set_child_pipeline
   plan:
    - get: pipelines-source
-   - get: child-gate
-   - set_pipeline:
+   - set_pipeline: child-pipeline
      file: pipelines-source/tests/gating/child_pipeline.yml
      var_files:
       - pipelines-source/tests/gating/config.yml
